* turrets aren't JSON anymore  * reimplemented sounds  * turrets properly rotate their head again  * code cleanup

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -5,35 +5,29 @@
   "block.sapturretmod.turret_crate": "Turret Crate",
 
   "_comment": "### Items ####",
-  "item.sapturretmod.turret_info": "Turret Lexicon",
-  "item.sapturretmod.turret_info.desc": "Gives information about the\\nitems in the Turret Mod.",
+  "item.sapturretmod.turret_lexicon": "Turret Lexicon",
+  "item.sapturretmod.turret_lexicon.desc": "Gives information about the\\nitems in the Turret Mod.",
   "_comment": "Turrets",
-  "item.sapturretmod:turret.variant": "Variant: %s",
-  "item.sapturretmod:turret.customname": "Name: %s",
-  "item.sapturretmod:turret.health": "Health: %s HP",
-  "item.sapturretmod:turret_crossbow": "Crossbow Turret (T1)",
-  "item.sapturretmod:turret_crossbow.variant_0": "Oak",
-  "item.sapturretmod:turret_crossbow.variant_1": "Spruce",
-  "item.sapturretmod:turret_crossbow.variant_2": "Birch",
-  "item.sapturretmod:turret_crossbow.variant_3": "Jungle",
-  "item.sapturretmod:turret_crossbow.variant_4": "Acacia",
-  "item.sapturretmod:turret_crossbow.variant_5": "Dark Oak",
-  "item.sapturretmod:turret_harpoon": "Harpoon Turret (T1)",
-  "item.sapturretmod:turret_shotgun": "Shotgun Turret (T1)",
-  "item.sapturretmod:turret_cryolator": "Cryolator Turret (T1)",
-  "item.sapturretmod:turret_revolver": "Revolver Turret (T2)",
-  "item.sapturretmod:turret_minigun": "Minigun Turret (T2)",
-  "item.sapturretmod:turret_forcefield": "Forcefield Turret (T2)",
-  "item.sapturretmod:turret_laser": "Laser Turret (T3)",
-  "item.sapturretmod:turret_flamethrower": "Flamethrower Turret (T3)",
+  "item.sapturretmod.turret.variant": "Variant: %s",
+  "item.sapturretmod.turret.customname": "Name: %s",
+  "item.sapturretmod.turret.health": "Health: %s HP",
+  "item.sapturretmod.crossbow_turret": "Crossbow Turret (T1)",
+  "item.sapturretmod.harpoon_turret": "Harpoon Turret (T1)",
+  "item.sapturretmod.shotgun_turret": "Shotgun Turret (T1)",
+  "item.sapturretmod.cryolator_turret": "Cryolator Turret (T1)",
+  "item.sapturretmod.revolver_turret": "Revolver Turret (T2)",
+  "item.sapturretmod.minigun_turret": "Minigun Turret (T2)",
+  "item.sapturretmod.forcefield_turret": "Forcefield Turret (T2)",
+  "item.sapturretmod.laser_turret": "Laser Turret (T3)",
+  "item.sapturretmod.flamethrower_turret": "Flamethrower Turret (T3)",
   "_comment": "TCU",
-  "item.sapturretmod:turret_control_unit": "Turret Control Unit",
-  "item.sapturretmod:turret_control_unit.bound": "Bound to turret",
-  "item.sapturretmod:turret_control_unit.name_1": "Turret Croissant Urn",
-  "item.sapturretmod:turret_control_unit.name_2": "Turret Corrosion Unity",
-  "item.sapturretmod:turret_control_unit.name_3": "Trigger Capacity Uranus",
-  "item.sapturretmod:turret_control_unit.name_4": "Timmy's Clean Utilities",
-  "item.sapturretmod:turret_control_unit.name_5": "Transient Colossal Uppercut",
+  "item.sapturretmod.turret_control_unit": "Turret Control Unit",
+  "item.sapturretmod.turret_control_unit.bound": "Bound to turret",
+  "item.sapturretmod.turret_control_unit.name_1": "Turret Croissant Urn",
+  "item.sapturretmod.turret_control_unit.name_2": "Turret Corrosion Unity",
+  "item.sapturretmod.turret_control_unit.name_3": "Trigger Capacity Uranus",
+  "item.sapturretmod.turret_control_unit.name_4": "Timmy's Clean Utilities",
+  "item.sapturretmod.turret_control_unit.name_5": "Transient Colossal Uppercut",
   "_comment": "Assembly Upgrades",
   "item.sapturretmod:turret_assembly_auto": "Automation Upgrade",
   "item.sapturretmod:turret_assembly_auto.ttip": "Used in the Turret Assembly Table",
@@ -46,59 +40,59 @@
   "item.sapturretmod:turret_assembly_redstone": "Redstone Awareness Upgrade",
   "item.sapturretmod:turret_assembly_redstone.ttip": "Used in the Turret Assembly Table",
   "_comment": "Ammo",
-  "item.sapturretmod:ammo_bolt": "Crossbow Bolt",
-  "item.sapturretmod:ammo_tipped_bolt": "Tipped Crossbow Bolt",
-  "item.sapturretmod:ammo_shotgun_shell": "Shotgun Shell",
-  "item.sapturretmod:ammo_harpoon": "Harpoon",
-  "item.sapturretmod:ammo_cryo_cell_1": "Cryo-Cell SG1",
-  "item.sapturretmod:ammo_cryo_cell_2": "Cryo-Cell SG2",
-  "item.sapturretmod:ammo_cryo_cell_3": "Cryo-Cell SG3",
-  "item.sapturretmod:ammo_bullet": "Revolver Bullets",
-  "item.sapturretmod:ammo_minigun_shell": "Minigun Rounds",
-  "item.sapturretmod:ammo_electrolyte_cell": "Electrolyte Cell",
-  "item.sapturretmod:ammo_flux_cell": "Flux-Cell",
-  "item.sapturretmod:ammo_fuel_tank": "Fuel Tank",
-  "item.sapturretmod:ammo_cartridge": "Ammunition Cartridge",
+  "item.sapturretmod.ammo_bolt": "Crossbow Bolt",
+  "item.sapturretmod.ammo_tipped_bolt": "Tipped Crossbow Bolt",
+  "item.sapturretmod.ammo_shotgun_shell": "Shotgun Shell",
+  "item.sapturretmod.ammo_harpoon": "Harpoon",
+  "item.sapturretmod.ammo_cryo_cell_1": "Cryo-Cell SG1",
+  "item.sapturretmod.ammo_cryo_cell_2": "Cryo-Cell SG2",
+  "item.sapturretmod.ammo_cryo_cell_3": "Cryo-Cell SG3",
+  "item.sapturretmod.ammo_bullet": "Revolver Bullets",
+  "item.sapturretmod.ammo_minigun_shell": "Minigun Rounds",
+  "item.sapturretmod.ammo_electrolyte_cell": "Electrolyte Cell",
+  "item.sapturretmod.ammo_flux_cell": "Flux-Cell",
+  "item.sapturretmod.ammo_fuel_tank": "Fuel Tank",
+  "item.sapturretmod.ammo_cartridge": "Ammunition Cartridge",
   "_comment": "Repair Kits",
-  "item.sapturretmod:repair_kit_standard_1": "Repair Kit HS05",
-  "item.sapturretmod:repair_kit_standard_2": "Repair Kit HS10",
-  "item.sapturretmod:repair_kit_standard_3": "Repair Kit HS15",
-  "item.sapturretmod:repair_kit_standard_4": "Repair Kit HS20",
-  "item.sapturretmod:repair_kit_regeneration_1": "Repair Kit HR01-40",
+  "item.sapturretmod.repair_kit_standard_1": "Repair Kit HS05",
+  "item.sapturretmod.repair_kit_standard_2": "Repair Kit HS10",
+  "item.sapturretmod.repair_kit_standard_3": "Repair Kit HS15",
+  "item.sapturretmod.repair_kit_standard_4": "Repair Kit HS20",
+  "item.sapturretmod.repair_kit_regeneration_1": "Repair Kit HR01-40",
   "_comment": "Turret Upgrades",
-  "item.sapturretmod:upgrade.requires": "Requires:",
-  "item.sapturretmod:upgrade.applicable_to": "Only Applicable On:",
-  "item.sapturretmod:upgrade.tier_range_single": "Only for Tier:",
-  "item.sapturretmod:upgrade.tier_range_multiple": "Only for Tiers:",
-  "item.sapturretmod:upgrade.shift_details": "<Hold Shift>",
-  "item.sapturretmod:upgrade_empty": "Upgrade Base",
-  "item.sapturretmod:upgrade_health_1": "Health I Upgrade",
-  "item.sapturretmod:upgrade_health_2": "Health II Upgrade",
-  "item.sapturretmod:upgrade_health_3": "Health III Upgrade",
-  "item.sapturretmod:upgrade_health_4": "Health IV Upgrade",
-  "item.sapturretmod:upgrade_reload_1": "Reload Time I Upgrade",
-  "item.sapturretmod:upgrade_reload_2": "Reload Time II Upgrade",
-  "item.sapturretmod:upgrade_storage_1": "Upgrade Storage I Upgrade",
-  "item.sapturretmod:upgrade_storage_2": "Upgrade Storage II Upgrade",
-  "item.sapturretmod:upgrade_storage_3": "Upgrade Storage III Upgrade",
-  "item.sapturretmod:upgrade_ammo_storage": "Ammunition Storage Upgrade",
-  "item.sapturretmod:upgrade_smart_targeting": "Smart Targeting Upgrade",
-  "item.sapturretmod:upgrade_economy_1": "Economy I Upgrade",
-  "item.sapturretmod:upgrade_economy_2": "Economy II Upgrade",
-  "item.sapturretmod:upgrade_economy_infinite": "Infinitas Oeconomia Upgrade",
-  "item.sapturretmod:upgrade_ender_gain_medium": "Ender Gain Medium Upgrade",
-  "item.sapturretmod:upgrade_fuel_purifier": "Fuel Purifier Upgrade",
-  "item.sapturretmod:upgrade_shield_personal": "Personal Shield Upgrade",
-  "item.sapturretmod:upgrade_shield_projectile": "Projectile Deflector Upgrade",
-  "item.sapturretmod:upgrade_shield_explosive": "Explosion Absorber Upgrade",
-  "item.sapturretmod:upgrade_shield_strength_1": "Shield Amplifier I Upgrade",
-  "item.sapturretmod:upgrade_shield_strength_2": "Shield Amplifier II Upgrade",
-  "item.sapturretmod:upgrade_shield_colorizer": "Shield Colorizer Upgrade",
-  "item.sapturretmod:upgrade_ender_toxin_1": "Ender Toxin I Upgrade",
-  "item.sapturretmod:upgrade_ender_toxin_2": "Ender Toxin II Upgrade",
-  "item.sapturretmod:upgrade_turret_safe": "Turret Safe Upgrade",
-  "item.sapturretmod:upgrade_leveling": "Leveling Upgrade",
-  "item.sapturretmod:upgrade_remote_access": "Remote Access Upgrade",
+  "item.sapturretmod.upgrade.requires": "Requires:",
+  "item.sapturretmod.upgrade.applicable_to": "Only Applicable On:",
+  "item.sapturretmod.upgrade.tier_range_single": "Only for Tier:",
+  "item.sapturretmod.upgrade.tier_range_multiple": "Only for Tiers:",
+  "item.sapturretmod.upgrade.shift_details": "<Hold Shift>",
+  "item.sapturretmod.upgrade_empty": "Upgrade Base",
+  "item.sapturretmod.upgrade_health_1": "Health I Upgrade",
+  "item.sapturretmod.upgrade_health_2": "Health II Upgrade",
+  "item.sapturretmod.upgrade_health_3": "Health III Upgrade",
+  "item.sapturretmod.upgrade_health_4": "Health IV Upgrade",
+  "item.sapturretmod.upgrade_reload_1": "Reload Time I Upgrade",
+  "item.sapturretmod.upgrade_reload_2": "Reload Time II Upgrade",
+  "item.sapturretmod.upgrade_storage_1": "Upgrade Storage I Upgrade",
+  "item.sapturretmod.upgrade_storage_2": "Upgrade Storage II Upgrade",
+  "item.sapturretmod.upgrade_storage_3": "Upgrade Storage III Upgrade",
+  "item.sapturretmod.upgrade_ammo_storage": "Ammunition Storage Upgrade",
+  "item.sapturretmod.upgrade_smart_targeting": "Smart Targeting Upgrade",
+  "item.sapturretmod.upgrade_economy_1": "Economy I Upgrade",
+  "item.sapturretmod.upgrade_economy_2": "Economy II Upgrade",
+  "item.sapturretmod.upgrade_economy_infinite": "Infinitas Oeconomia Upgrade",
+  "item.sapturretmod.upgrade_ender_gain_medium": "Ender Gain Medium Upgrade",
+  "item.sapturretmod.upgrade_fuel_purifier": "Fuel Purifier Upgrade",
+  "item.sapturretmod.upgrade_shield_personal": "Personal Shield Upgrade",
+  "item.sapturretmod.upgrade_shield_projectile": "Projectile Deflector Upgrade",
+  "item.sapturretmod.upgrade_shield_explosive": "Explosion Absorber Upgrade",
+  "item.sapturretmod.upgrade_shield_strength_1": "Shield Amplifier I Upgrade",
+  "item.sapturretmod.upgrade_shield_strength_2": "Shield Amplifier II Upgrade",
+  "item.sapturretmod.upgrade_shield_colorizer": "Shield Colorizer Upgrade",
+  "item.sapturretmod.upgrade_ender_toxin_1": "Ender Toxin I Upgrade",
+  "item.sapturretmod.upgrade_ender_toxin_2": "Ender Toxin II Upgrade",
+  "item.sapturretmod.upgrade_turret_safe": "Turret Safe Upgrade",
+  "item.sapturretmod.upgrade_leveling": "Leveling Upgrade",
+  "item.sapturretmod.upgrade_remote_access": "Remote Access Upgrade",
 
   "_comment": "### Entities ####",
   "attribute.generic.maxHealth": "Max. Health",
@@ -115,24 +109,24 @@
   "attribute.sapturretmod.maxReloadTicks": "Reload Time",
   "attribute.sapturretmod.maxInitShootTicks": "Targeting Time",
   "_comment": "Turrets",
-  "entity.sapturretmod:turret_crossbow": "Crossbow Turret (T1)",
-  "entity.sapturretmod:turret_harpoon": "Harpoon Turret (T1)",
-  "entity.sapturretmod:turret_shotgun": "Shotgun Turret (T1)",
-  "entity.sapturretmod:turret_cryolator": "Cryolator Turret (T1)",
-  "entity.sapturretmod:turret_revolver": "Revolver Turret (T2)",
-  "entity.sapturretmod:turret_minigun": "Minigun Turret (T2)",
-  "entity.sapturretmod:turret_forcefield": "Forcefield Turret (T2)",
-  "entity.sapturretmod:turret_laser": "Laser Turret (T3)",
-  "entity.sapturretmod:turret_flamethrower": "Flamethrower Turret (T3)",
+  "entity.sapturretmod.crossbow_turret": "Crossbow Turret (T1)",
+  "entity.sapturretmod.harpoon_turret": "Harpoon Turret (T1)",
+  "entity.sapturretmod.shotgun_turret": "Shotgun Turret (T1)",
+  "entity.sapturretmod.cryolator_turret": "Cryolator Turret (T1)",
+  "entity.sapturretmod.revolver_turret": "Revolver Turret (T2)",
+  "entity.sapturretmod.minigun_turret": "Minigun Turret (T2)",
+  "entity.sapturretmod.forcefield_turret": "Forcefield Turret (T2)",
+  "entity.sapturretmod.laser_turret": "Laser Turret (T3)",
+  "entity.sapturretmod.flamethrower_turret": "Flamethrower Turret (T3)",
   "_comment": "Death Messages",
-  "death.attack.sapturretmod.turret.sapturretmod:turret_crossbow": "%1$s was shot by %2$s",
-  "death.attack.sapturretmod.turret.sapturretmod:turret_shotgun": "%1$s has been turned into cheese by %2$s",
-  "death.attack.sapturretmod.turret.sapturretmod:turret_snowball": "%1$s was frozen solid by %2$s",
-  "death.attack.sapturretmod.turret.sapturretmod:turret_revolver": "%1$s played gunslinger with %2$s and lost",
-  "death.attack.sapturretmod.turret.sapturretmod:turret_minigun": "%1$s was pricked to death by %2$s",
-  "death.attack.sapturretmod.turret.sapturretmod:turret_shieldgen": "%1$s was smushed to death by %2$s",
-  "death.attack.sapturretmod.turret.sapturretmod:turret_laser": "%1$s was cut precisely by %2$s",
-  "death.attack.sapturretmod.turret.sapturretmod:turret_flamethrower": "%1$s has been cooked well-done by %2$s",
+  "death.attack.sapturretmod.crossbow_turret": "%1$s was shot by %2$s",
+  "death.attack.sapturretmod.shotgun_turret": "%1$s has been turned into cheese by %2$s",
+  "death.attack.sapturretmod.snowball_turret": "%1$s was frozen solid by %2$s",
+  "death.attack.sapturretmod.revolver_turret": "%1$s played gunslinger with %2$s and lost",
+  "death.attack.sapturretmod.minigun_turret": "%1$s was pricked to death by %2$s",
+  "death.attack.sapturretmod.shieldgen_turret": "%1$s was smushed to death by %2$s",
+  "death.attack.sapturretmod.laser_turret": "%1$s was cut precisely by %2$s",
+  "death.attack.sapturretmod.flamethrower_turret": "%1$s has been cooked well-done by %2$s",
 
   "_comment": "### GUI ####",
   "_comment": "TCU",
@@ -220,20 +214,21 @@
   "container.sapturretmod.turret_crate": "Turret Crate",
 
   "_comment": "### Subtitles ####",
-  "subtitles.sapturretmod.turretIdle": "Turret idles",
-  "subtitles.sapturretmod.turretGather": "Turret gathers",
-  "subtitles.sapturretmod.turretDeath": "Turret breaks",
-  "subtitles.sapturretmod.turretHit": "Turret damaged",
-  "subtitles.sapturretmod.turretShoot.shotgun": "Shotgun Turret shoots",
-  "subtitles.sapturretmod.turretShoot.cryolator": "Cryolator Turret shoots",
-  "subtitles.sapturretmod.turretShoot.minigun": "Minigun Turret shoots",
-  "subtitles.sapturretmod.turretShoot.pistol": "Revolver Turret shoots",
-  "subtitles.sapturretmod.turretShoot.laser": "Laser Turret shoots",
-  "subtitles.sapturretmod.turretShoot.flamethrower": "Flamethrower Turret fires",
-  "subtitles.sapturretmod.turretShoot.sniper": "Plasma Turret shoots",
-  "subtitles.sapturretmod.turretShoot.healer": "Healer Turret heals",
-  "subtitles.sapturretmod.turretShoot.flak": "Flak Turret launches",
-  "subtitles.sapturretmod.turretShoot.artillery": "Artillery Turret shoots",
+  "subtitles.sapturretmod.turret_idle": "Turret idles",
+  "subtitles.sapturretmod.turret_pickup": "Turret gathers",
+  "subtitles.sapturretmod.turret_pickup_chest": "Turret gathers from Inventory",
+  "subtitles.sapturretmod.turret_death": "Turret broke",
+  "subtitles.sapturretmod.turret_hurt": "Turret damaged",
+  "subtitles.sapturretmod.shotgun_turret_shot": "Shotgun Turret shoots",
+  "subtitles.sapturretmod.cryolator_turret_shot": "Cryolator Turret shoots",
+  "subtitles.sapturretmod.minigun_turret_shot": "Minigun Turret shoots",
+  "subtitles.sapturretmod.revolver_turret_shot": "Revolver Turret shoots",
+  "subtitles.sapturretmod.laser_turret_shot": "Laser Turret shoots",
+  "subtitles.sapturretmod.flamethrower_turret_shot": "Flamethrower Turret fires",
+  "subtitles.sapturretmod.plasma_turret_shot": "Plasma Turret shoots",
+  "subtitles.sapturretmod.healer_turret_shot": "Healer Turret heals",
+  "subtitles.sapturretmod.flak_turret_shot": "Flak Turret launches",
+  "subtitles.sapturretmod.artillery_turret_shot": "Artillery Turret shoots",
   "subtitles.sapturretmod.turretRicochet.bullet": "Bullet ricochets",
   "subtitles.sapturretmod.turretRicochet.splash": "Projectile splashes",
   "subtitles.sapturretmod.turretShield.active": "Shield engages",
