* projectiles render now  * tipped crossbow bolts now have their color again

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -40,19 +40,19 @@
   "item.sapturretmod:turret_assembly_redstone": "Redstone Awareness Upgrade",
   "item.sapturretmod:turret_assembly_redstone.ttip": "Used in the Turret Assembly Table",
   "_comment": "Ammo",
-  "item.sapturretmod.ammo_bolt": "Crossbow Bolt",
-  "item.sapturretmod.ammo_tipped_bolt": "Tipped Crossbow Bolt",
-  "item.sapturretmod.ammo_shotgun_shell": "Shotgun Shell",
-  "item.sapturretmod.ammo_harpoon": "Harpoon",
-  "item.sapturretmod.ammo_cryo_cell_1": "Cryo-Cell SG1",
-  "item.sapturretmod.ammo_cryo_cell_2": "Cryo-Cell SG2",
-  "item.sapturretmod.ammo_cryo_cell_3": "Cryo-Cell SG3",
-  "item.sapturretmod.ammo_bullet": "Revolver Bullets",
-  "item.sapturretmod.ammo_minigun_shell": "Minigun Rounds",
-  "item.sapturretmod.ammo_electrolyte_cell": "Electrolyte Cell",
-  "item.sapturretmod.ammo_flux_cell": "Flux-Cell",
-  "item.sapturretmod.ammo_fuel_tank": "Fuel Tank",
-  "item.sapturretmod.ammo_cartridge": "Ammunition Cartridge",
+  "item.sapturretmod.crossbow_bolt": "Crossbow Bolt",
+  "item.sapturretmod.tipped_crossbow_bolt": "Tipped Crossbow Bolt",
+  "item.sapturretmod.shotgun_shell": "Shotgun Shell",
+  "item.sapturretmod.harpoon": "Harpoon",
+  "item.sapturretmod.cryo_cell_1": "Cryo-Cell SG1",
+  "item.sapturretmod.cryo_cell_2": "Cryo-Cell SG2",
+  "item.sapturretmod.cryo_cell_3": "Cryo-Cell SG3",
+  "item.sapturretmod.bullet": "Revolver Bullets",
+  "item.sapturretmod.minigun_shell": "Minigun Rounds",
+  "item.sapturretmod.electrolyte_cell": "Electrolyte Cell",
+  "item.sapturretmod.flux_cell": "Flux-Cell",
+  "item.sapturretmod.fuel_tank": "Fuel Tank",
+  "item.sapturretmod.cartridge": "Ammunition Cartridge",
   "_comment": "Repair Kits",
   "item.sapturretmod.repair_kit_standard_1": "Repair Kit HS05",
   "item.sapturretmod.repair_kit_standard_2": "Repair Kit HS10",
