* reimplemented ammunition cartridge  * reimplemented TCU labels  * reimplemented target config (incl. entity tags for automatic recognition)  * began reimplementing TCU GUI

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -52,7 +52,8 @@
   "item.sapturretmod.electrolyte_cell": "Electrolyte Cell",
   "item.sapturretmod.flux_cell": "Flux-Cell",
   "item.sapturretmod.fuel_tank": "Fuel Tank",
-  "item.sapturretmod.cartridge": "Ammunition Cartridge",
+  "item.sapturretmod.ammo_cartridge": "Ammunition Cartridge",
+  "item.sapturretmod.ammo_cartridge.stored": "Stored: %dx %s",
   "_comment": "Repair Kits",
   "item.sapturretmod.repair_kit_standard_1": "Repair Kit HS05",
   "item.sapturretmod.repair_kit_standard_2": "Repair Kit HS10",
@@ -131,9 +132,11 @@
 
   "_comment": "### GUI ####",
   "_comment": "TCU",
-  "gui.sapturretmod.tcu.label.health": "Health: %s",
-  "gui.sapturretmod.tcu.label.ammo": "Ammo: %s",
-  "gui.sapturretmod.tcu.label.target": "Target: %s",
+  "gui.sapturretmod.tcu.label.health.text": "Health:",
+  "gui.sapturretmod.tcu.label.health.value": "%.1f hearts",
+  "gui.sapturretmod.tcu.label.ammo.text": "Ammo:",
+  "gui.sapturretmod.tcu.label.ammo.value": "%d rounds",
+  "gui.sapturretmod.tcu.label.target": "Target:",
   "gui.sapturretmod.tcu.label.shield_pers": "Pers. Shield: %s",
   "gui.sapturretmod.tcu.label.shield_pers_recv": "Pers. Shield: Recovering %s",
   "gui.sapturretmod.tcu.label.shield_turret": "Shield: %s",
