* width and height of container GUIs properly set now  * began work on TCU GUI  * readded shaders

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -153,14 +153,14 @@
   "gui.sapturretmod.tcu.page.sapturretmod:info.player": "Owner",
   "gui.sapturretmod.tcu.page.sapturretmod:info.forcefield": "Forcefield",
   "gui.sapturretmod.tcu.page.sapturretmod:info.forcefield.suffix": "%s points",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets.search.placeholder": "Search for targets",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets.creature.title": "Entity Target Settings",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets.player.title": "Player Target Settings",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets.smart.title": "Smart Target Settings",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets.smart.turret": "Turret Awareness",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets.smart.tamed": "Tamed Awareness",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets.smart.age": "Age Awareness",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets.smart.count": "Count Awareness",
+  "gui.sapturretmod.tcu.page.sapturretmod:targets.search_placeholder": "Search for targets",
+  "gui.sapturretmod.tcu.page.sapturretmod:targets_creatures.title": "Entity Target Settings",
+  "gui.sapturretmod.tcu.page.sapturretmod:targets_players.title": "Player Target Settings",
+  "gui.sapturretmod.tcu.page.sapturretmod:targets_smart.title": "Smart Target Settings",
+  "gui.sapturretmod.tcu.page.sapturretmod:targets_smart.turret": "Turret Awareness",
+  "gui.sapturretmod.tcu.page.sapturretmod:targets_smart.tamed": "Tamed Awareness",
+  "gui.sapturretmod.tcu.page.sapturretmod:targets_smart.age": "Age Awareness",
+  "gui.sapturretmod.tcu.page.sapturretmod:targets_smart.count": "Count Awareness",
   "gui.sapturretmod.tcu.page.sapturretmod:colorizer.title": "Shield Color Settings",
   "gui.sapturretmod.tcu.page.sapturretmod:colorizer.colorcode": "Color Code",
   "gui.sapturretmod.tcu.page.sapturretmod:colorizer.cullfaces": "Cull Inner Faces",
