* re-added Turret Crate  * started working on TCU info GUI

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -141,64 +141,67 @@
   "gui.sapturretmod.tcu.label.shield_pers_recv": "Pers. Shield: Recovering %s",
   "gui.sapturretmod.tcu.label.shield_turret": "Shield: %s",
   "gui.sapturretmod.tcu.label.shield_turret_recv": "Shield: Recovering %s",
-  "gui.sapturretmod.tcu.page.sapturretmod:info.title": "Turret Info",
-  "gui.sapturretmod.tcu.page.sapturretmod:info.dismantle.error": "You need a Turret Crate in your inventory to dismantle!",
-  "gui.sapturretmod.tcu.page.sapturretmod:info": "Custom Turret Name",
-  "gui.sapturretmod.tcu.page.sapturretmod:info.health": "Health",
-  "gui.sapturretmod.tcu.page.sapturretmod:info.health.suffix": "%s hearts",
-  "gui.sapturretmod.tcu.page.sapturretmod:info.armor.suffix": "(+%s h.)",
-  "gui.sapturretmod.tcu.page.sapturretmod:info.ammo": "Ammo",
-  "gui.sapturretmod.tcu.page.sapturretmod:info.ammo.suffix": "%s rounds",
-  "gui.sapturretmod.tcu.page.sapturretmod:info.target": "Current Target",
-  "gui.sapturretmod.tcu.page.sapturretmod:info.player": "Owner",
-  "gui.sapturretmod.tcu.page.sapturretmod:info.forcefield": "Forcefield",
-  "gui.sapturretmod.tcu.page.sapturretmod:info.forcefield.suffix": "%s points",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets.search_placeholder": "Search for targets",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets_creatures.title": "Entity Target Settings",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets_players.title": "Player Target Settings",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets_smart.title": "Smart Target Settings",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets_smart.turret": "Turret Awareness",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets_smart.tamed": "Tamed Awareness",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets_smart.age": "Age Awareness",
-  "gui.sapturretmod.tcu.page.sapturretmod:targets_smart.count": "Count Awareness",
-  "gui.sapturretmod.tcu.page.sapturretmod:colorizer.title": "Shield Color Settings",
-  "gui.sapturretmod.tcu.page.sapturretmod:colorizer.colorcode": "Color Code",
-  "gui.sapturretmod.tcu.page.sapturretmod:colorizer.cullfaces": "Cull Inner Faces",
-  "gui.sapturretmod.tcu.page.sapturretmod:upgrades.title": "Upgrades",
-  "gui.sapturretmod.tcu.page.sapturretmod:leveling.title": "Leveling",
-  "gui.sapturretmod.tcu.page.sapturretmod:leveling.xp": "XP: %s",
-  "gui.sapturretmod.tcu.page.sapturretmod:leveling.retrieve": "Retrieve excess XP",
-  "gui.sapturretmod.tcu.page.sapturretmod:leveling.modifier": "Modifiers",
-  "gui.sapturretmod.tcu.page.sapturretmod:leveling.modValue": "%s %%",
-  "gui.sapturretmod.tcu.page.sapturretmod:remote_access.title": "Remote Access",
-  "gui.sapturretmod.tcu.page.sapturretmod:remote_access.ammo": "Ammunition",
-  "gui.sapturretmod.tcu.page.sapturretmod:remote_access.repair_kit": "Repair Kits",
-  "gui.sapturretmod.tcu.button.info.dismantle": "Dismantle Turret",
-  "gui.sapturretmod.tcu.button.info.activate": "Activate Turret",
-  "gui.sapturretmod.tcu.button.info.deactivate": "Deactivate Turret",
-  "gui.sapturretmod.tcu.button.info.show_range": "Show Range",
-  "gui.sapturretmod.tcu.button.info.hide_range": "Hide Range",
-  "gui.sapturretmod.tcu.button.targets.whitelist": "Whitelist Mode",
-  "gui.sapturretmod.tcu.button.targets.blacklist": "Blacklist Mode",
-  "gui.sapturretmod.tcu.button.targets.select_all": "Select All",
-  "gui.sapturretmod.tcu.button.targets.deselect_all": "Deselect All",
-  "gui.sapturretmod.tcu.button.targets.creature.select_mobs": "Select Monster",
-  "gui.sapturretmod.tcu.button.targets.creature.select_animals": "Select Animals",
-  "gui.sapturretmod.tcu.button.targets.creature.select_other": "Select Other",
-  "gui.sapturretmod.tcu.button.targets.smart.turret_ignore": "Ignore other turrets",
-  "gui.sapturretmod.tcu.button.targets.smart.turret_same": "Ignore entities targeted\\nby turrets of the same type",
-  "gui.sapturretmod.tcu.button.targets.smart.turret_all": "Ignore entities targeted\\nby turrets of any type",
-  "gui.sapturretmod.tcu.button.targets.smart.tamed_all": "Target all tamed entities",
-  "gui.sapturretmod.tcu.button.targets.smart.tamed_players": "Only target tamed entities\\nfrom targeted players",
-  "gui.sapturretmod.tcu.button.targets.smart.tamed_none": "Don't target tamed entities",
-  "gui.sapturretmod.tcu.button.targets.smart.child_adult": "Target children and adults",
-  "gui.sapturretmod.tcu.button.targets.smart.child_only": "Target only children",
-  "gui.sapturretmod.tcu.button.targets.smart.adult_only": "Target only adults",
-  "gui.sapturretmod.tcu.button.targets.smart.count_no": "Ignore entity count",
-  "gui.sapturretmod.tcu.button.targets.smart.count_global_less": "Shoot when global entity\\namount is less than...",
-  "gui.sapturretmod.tcu.button.targets.smart.count_global_more": "Shoot when global entity\\namount is more than...",
-  "gui.sapturretmod.tcu.button.targets.smart.count_individual_less": "Shoot when amount of the same\\ntype of entity is less than...",
-  "gui.sapturretmod.tcu.button.targets.smart.count_individual_more": "Shoot when amount of the same\\ntype of entity is more than...",
+
+  "gui.sapturretmod.tcu.sapturretmod:info": "Turret Info",
+  "gui.sapturretmod.tcu.sapturretmod:targets_creatures": "Entity Target Settings",
+  "gui.sapturretmod.tcu.sapturretmod:targets_players": "Player Target Settings",
+  "gui.sapturretmod.tcu.sapturretmod:targets_smart": "Smart Target Settings",
+  "gui.sapturretmod.tcu.sapturretmod:colorizer": "Shield Color Settings",
+  "gui.sapturretmod.tcu.sapturretmod:upgrades": "Upgrades",
+  "gui.sapturretmod.tcu.sapturretmod:leveling": "Leveling",
+  "gui.sapturretmod.tcu.sapturretmod:remote_access": "Remote Access",
+
+  "gui.sapturretmod.tcu.info.health.tooltip": "Health",
+  "gui.sapturretmod.tcu.info.health.suffix": "%s hearts",
+  "gui.sapturretmod.tcu.info.health.armor": "(+%s h.)",
+  "gui.sapturretmod.tcu.info.ammo.tooltip": "Ammo",
+  "gui.sapturretmod.tcu.info.ammo.suffix": "%s rounds",
+  "gui.sapturretmod.tcu.info.forcefield.tooltip": "Forcefield",
+  "gui.sapturretmod.tcu.info.forcefield.suffix": "%s points",
+  "gui.sapturretmod.tcu.info.name": "Custom Turret Name",
+  "gui.sapturretmod.tcu.info.target": "Current Target",
+  "gui.sapturretmod.tcu.info.player": "Owner",
+  "gui.sapturretmod.tcu.info.dismantle": "Dismantle Turret",
+  "gui.sapturretmod.tcu.info.dismantle.error": "You need a Turret Crate in your inventory to dismantle!",
+  "gui.sapturretmod.tcu.info.activate": "Activate Turret",
+  "gui.sapturretmod.tcu.info.deactivate": "Deactivate Turret",
+  "gui.sapturretmod.tcu.info.show_range": "Show Range",
+  "gui.sapturretmod.tcu.info.hide_range": "Hide Range",
+
+  "gui.sapturretmod.tcu.targets.search.placeholder": "Search for targets",
+  "gui.sapturretmod.tcu.text.targets_smart.turret": "Turret Awareness",
+  "gui.sapturretmod.tcu.text.targets_smart.tamed": "Tamed Awareness",
+  "gui.sapturretmod.tcu.text.targets_smart.age": "Age Awareness",
+  "gui.sapturretmod.tcu.text.targets_smart.count": "Count Awareness",
+  "gui.sapturretmod.tcu.text.colorizer.colorcode": "Color Code",
+  "gui.sapturretmod.tcu.text.colorizer.cullfaces": "Cull Inner Faces",
+  "gui.sapturretmod.tcu.tooltip.leveling.retrieve": "Retrieve excess XP",
+  "gui.sapturretmod.tcu.text.leveling.xp": "XP: %s",
+  "gui.sapturretmod.tcu.text.leveling.modifier": "Modifiers",
+  "gui.sapturretmod.tcu.text.leveling.modValue": "%s %%",
+  "gui.sapturretmod.tcu.text.remote_access.ammo": "Ammunition",
+  "gui.sapturretmod.tcu.text.remote_access.repair_kit": "Repair Kits",
+  "gui.sapturretmod.tcu.tooltip.targets.whitelist": "Whitelist Mode",
+  "gui.sapturretmod.tcu.tooltip.targets.blacklist": "Blacklist Mode",
+  "gui.sapturretmod.tcu.tooltip.targets.select_all": "Select All",
+  "gui.sapturretmod.tcu.tooltip.targets.deselect_all": "Deselect All",
+  "gui.sapturretmod.tcu.tooltip.targets.creature.select_mobs": "Select Monster",
+  "gui.sapturretmod.tcu.tooltip.targets.creature.select_animals": "Select Animals",
+  "gui.sapturretmod.tcu.tooltip.targets.creature.select_other": "Select Other",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.turret_ignore": "Ignore other turrets",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.turret_same": "Ignore entities targeted\\nby turrets of the same type",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.turret_all": "Ignore entities targeted\\nby turrets of any type",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.tamed_all": "Target all tamed entities",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.tamed_players": "Only target tamed entities\\nfrom targeted players",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.tamed_none": "Don't target tamed entities",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.child_adult": "Target children and adults",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.child_only": "Target only children",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.adult_only": "Target only adults",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.count_no": "Ignore entity count",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.count_global_less": "Shoot when global entity\\namount is less than...",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.count_global_more": "Shoot when global entity\\namount is more than...",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.count_individual_less": "Shoot when amount of the same\\ntype of entity is less than...",
+  "gui.sapturretmod.tcu.tooltip.targets.smart.count_individual_more": "Shoot when amount of the same\\ntype of entity is more than...",
   "_comment": "Assembly",
   "gui.sapturretmod.tassembly.cancel": "Cancel",
   "gui.sapturretmod.tassembly.automate.enable": "Automate",
