finished HealthProvider, now to "abstractify" it...

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -133,9 +133,9 @@
   "_comment": "### GUI ####",
   "_comment": "TCU",
   "gui.sapturretmod.tcu.label.health.text": "Health:",
-  "gui.sapturretmod.tcu.label.health.value": "%.1f hearts",
+  "gui.sapturretmod.tcu.label.health.value": "%s hearts",
   "gui.sapturretmod.tcu.label.ammo.text": "Ammo:",
-  "gui.sapturretmod.tcu.label.ammo.value": "%d rounds",
+  "gui.sapturretmod.tcu.label.ammo.value": "%s rounds",
   "gui.sapturretmod.tcu.label.target": "Target:",
   "gui.sapturretmod.tcu.label.shield_pers": "Pers. Shield: %s",
   "gui.sapturretmod.tcu.label.shield_pers_recv": "Pers. Shield: Recovering %s",
@@ -152,7 +152,7 @@
   "gui.sapturretmod.tcu.sapturretmod:remote_access": "Remote Access",
 
   "gui.sapturretmod.tcu.info.health.tooltip": "Health",
-  "gui.sapturretmod.tcu.info.health.suffix": "%s hearts",
+  "gui.sapturretmod.tcu.info.health.value": "%s/%s hearts",
   "gui.sapturretmod.tcu.info.health.armor": "(+%s h.)",
   "gui.sapturretmod.tcu.info.ammo.tooltip": "Ammo",
   "gui.sapturretmod.tcu.info.ammo.suffix": "%s rounds",
