abstracted info providers into IndicatorProvider, added AmmoProvider

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -153,11 +153,11 @@
 
   "gui.sapturretmod.tcu.info.health.tooltip": "Health",
   "gui.sapturretmod.tcu.info.health.value": "%s/%s hearts",
-  "gui.sapturretmod.tcu.info.health.armor": "(+%s h.)",
+  "gui.sapturretmod.tcu.info.health.armor": "(+%s pts)",
   "gui.sapturretmod.tcu.info.ammo.tooltip": "Ammo",
-  "gui.sapturretmod.tcu.info.ammo.suffix": "%s rounds",
+  "gui.sapturretmod.tcu.info.ammo.value": "%s/%s rounds",
   "gui.sapturretmod.tcu.info.forcefield.tooltip": "Forcefield",
-  "gui.sapturretmod.tcu.info.forcefield.suffix": "%s points",
+  "gui.sapturretmod.tcu.info.forcefield.value": "%s/s points",
   "gui.sapturretmod.tcu.info.name": "Custom Turret Name",
   "gui.sapturretmod.tcu.info.target": "Current Target",
   "gui.sapturretmod.tcu.info.player": "Owner",
