--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -158,9 +158,9 @@
   "gui.sapturretmod.tcu.info.ammo.value": "%s/%s rounds",
   "gui.sapturretmod.tcu.info.forcefield.tooltip": "Forcefield",
   "gui.sapturretmod.tcu.info.forcefield.value": "%s/s points",
-  "gui.sapturretmod.tcu.info.name": "Custom Turret Name",
-  "gui.sapturretmod.tcu.info.target": "Current Target",
-  "gui.sapturretmod.tcu.info.player": "Owner",
+  "gui.sapturretmod.tcu.info.name.tooltip": "Custom Turret Name",
+  "gui.sapturretmod.tcu.info.target.tooltip": "Current Target",
+  "gui.sapturretmod.tcu.info.player.tooltip": "Owner",
   "gui.sapturretmod.tcu.info.dismantle": "Dismantle Turret",
   "gui.sapturretmod.tcu.info.dismantle.error": "You need a Turret Crate in your inventory to dismantle!",
   "gui.sapturretmod.tcu.info.activate": "Activate Turret",
