* changed sanlib repo from github to repsy  * finished work in TCU info GUI (for now), adding target and owner providers  * started work on TCU targets GUI  * Electrolyte Generator now is unpushable by pistons (the top part was pushable, bugging out the multipart tile)  * Electrolyte Generator screen now does not implement IGuiDynamicText anymore and some other changes because of it due to changes in SanLib  * changed movement code in turret entity to make it properly pushable by pistons  * removed local maven repo  * general code cleanup

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -160,6 +160,7 @@
   "gui.sapturretmod.tcu.info.forcefield.value": "%s/s points",
   "gui.sapturretmod.tcu.info.name.tooltip": "Custom Turret Name",
   "gui.sapturretmod.tcu.info.target.tooltip": "Current Target",
+  "gui.sapturretmod.tcu.info.target.empty": "no target",
   "gui.sapturretmod.tcu.info.player.tooltip": "Owner",
   "gui.sapturretmod.tcu.info.dismantle": "Dismantle Turret",
   "gui.sapturretmod.tcu.info.dismantle.error": "You need a Turret Crate in your inventory to dismantle!",
@@ -167,6 +168,13 @@
   "gui.sapturretmod.tcu.info.deactivate": "Deactivate Turret",
   "gui.sapturretmod.tcu.info.show_range": "Show Range",
   "gui.sapturretmod.tcu.info.hide_range": "Hide Range",
+  "gui.sapturretmod.tcu.targets.allowlist": "Allow List Mode",
+  "gui.sapturretmod.tcu.targets.denylist": "Deny List Mode",
+  "gui.sapturretmod.tcu.targets.select_all": "Select All",
+  "gui.sapturretmod.tcu.targets.deselect_all": "Deselect All",
+  "gui.sapturretmod.tcu.targets.creature.select_mobs": "Select Monster",
+  "gui.sapturretmod.tcu.targets.creature.select_animals": "Select Animals",
+  "gui.sapturretmod.tcu.targets.creature.select_other": "Select Other",
 
   "gui.sapturretmod.tcu.targets.search.placeholder": "Search for targets",
   "gui.sapturretmod.tcu.text.targets_smart.turret": "Turret Awareness",
@@ -181,13 +189,6 @@
   "gui.sapturretmod.tcu.text.leveling.modValue": "%s %%",
   "gui.sapturretmod.tcu.text.remote_access.ammo": "Ammunition",
   "gui.sapturretmod.tcu.text.remote_access.repair_kit": "Repair Kits",
-  "gui.sapturretmod.tcu.tooltip.targets.whitelist": "Whitelist Mode",
-  "gui.sapturretmod.tcu.tooltip.targets.blacklist": "Blacklist Mode",
-  "gui.sapturretmod.tcu.tooltip.targets.select_all": "Select All",
-  "gui.sapturretmod.tcu.tooltip.targets.deselect_all": "Deselect All",
-  "gui.sapturretmod.tcu.tooltip.targets.creature.select_mobs": "Select Monster",
-  "gui.sapturretmod.tcu.tooltip.targets.creature.select_animals": "Select Animals",
-  "gui.sapturretmod.tcu.tooltip.targets.creature.select_other": "Select Other",
   "gui.sapturretmod.tcu.tooltip.targets.smart.turret_ignore": "Ignore other turrets",
   "gui.sapturretmod.tcu.tooltip.targets.smart.turret_same": "Ignore entities targeted\\nby turrets of the same type",
   "gui.sapturretmod.tcu.tooltip.targets.smart.turret_all": "Ignore entities targeted\\nby turrets of any type",
